--- a/_config.yml
+++ b/_config.yml
@@ -54,11 +54,11 @@ email: jackofalltradesray@gmail.com
 
 authors:
     johndoe:
-        name: John Doe
+        name: Himanshu Ray
         bio: A Man who travels the world eating noodles
         external-image: false
         picture: assets/images/profile.jpg
-        twitter: johndoe
+        twitter: thehimanshuray
     jamesfoster:
         name: James Foster
         bio: A Man who develops software with coffee
