--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ medium: medium
 email: jackofalltradesray@gmail.com
 
 authors:
-    johndoe:
+    himanshuray:
         name: Himanshu Ray
         bio: A Man who travels the world eating noodles
         external-image: false
