--- a/_config.yml
+++ b/_config.yml
@@ -34,18 +34,18 @@ disqus:
   categories: [blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
-facebook: myfacebook
-twitter: mytwitter
+# facebook: myfacebook
+twitter: iAmHimanshuRay
 # google: mygoogle
-# instagram: myinstagram
+instagram: thehimanshuray
 # pinterest: mypinterest
-# linkedin: mylinkedin
+linkedin: iamhimanshuray
 # youtube: myyoutube
 # spotify: myspotify
 github: iamrayofhope
 # lastfm: mylastfm
 # stackoverflow: 7044681/mystackoverflow
-# quora: userquora
+quora: Himanshu-Ray-1
 # reddit: username
 medium: medium
 # vimeo: myvimeo
