--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Himanshu Ray
-bio: A Man who travels the world eating noodles
+bio: A Cinephile, Voyager and Designer/Developer Hybrid 
 
 # twitter summary info
 description: A blog about technology and stuff related
